fix alignment of <sub> text / fix not opening accordion

--- a/src/main/resources/static/client.css
+++ b/src/main/resources/static/client.css
@@ -8,6 +8,18 @@ body, div {
     font-family: 'Fira Sans', sans-serif;   
 }
 
+
+
+sup, sub {
+  vertical-align: baseline;
+  position: relative;
+  top: -0.4em;
+}
+sub { 
+  top: 0.4em; 
+}
+
+
 .waitMe {
 	background: rgba(255, 255, 255, 0.7) !important;
 }
